--- a/.gitignore
+++ b/.gitignore
@@ -102,3 +102,33 @@ dist
 
 # TernJS port file
 .tern-port
+
+# Visual Studio Code
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+*.code-workspace
+
+# Local History for Visual Studio Code
+.history/
+
+# Notepad++
+nppBackup
+
+# OS X
+.DS_Store
+._*
+.Spotlight-V100
+.Trashes
+
+# KDE directory preferences
+.directory
+
+# Windows
+Desktop.ini
+Thumbs.db
+ehthumbs.db
+$RECYCLE.BIN/
+Icon?
