--- a/action.yml
+++ b/action.yml
@@ -2,7 +2,7 @@ name: 'Create Branch from Directory'
 description: 'Creates a branch such that it has the contents of a directory from another branch.'
 inputs:
   github_token:
-    description: 'Token for the repo. Can be passed in using `${{ secrets.GITHUB_TOKEN }}`.'
+    description: 'Token for the repo. Can be passed in using `$\{{ secrets.GITHUB_TOKEN }}`.'
     required: true
 runs:
   using: 'node12'
