--- a/action.yml
+++ b/action.yml
@@ -4,6 +4,8 @@ inputs:
   github_token:
     description: 'Token for the repo. Can be passed in using `$\{{ secrets.GITHUB_TOKEN }}`.'
     required: true
+  test-value:
+    description: 'testing'
 runs:
   using: 'node12'
   main: 'index.js'
